src/test/ui/resolve/resolve-assoc-suggestions.stderr
error[E0412]: type name `field` is undefined or not in scope
  --> $DIR/resolve-assoc-suggestions.rs:26:16
   |
26 |         let _: field;
   |                ^^^^^ undefined or not in scope
   |
   = help: no candidates by the name of `field` found in your project; maybe you misspelled the name or forgot to import an external crate?

error[E0531]: unresolved tuple struct/variant `field`
  --> $DIR/resolve-assoc-suggestions.rs:29:13
   |
29 |         let field(..);
   |             ^^^^^

error[E0425]: unresolved name `field`
  --> $DIR/resolve-assoc-suggestions.rs:32:9
   |
32 |         field;
   |         ^^^^^ did you mean `self.field`?

error[E0412]: type name `Type` is undefined or not in scope
  --> $DIR/resolve-assoc-suggestions.rs:36:16
   |
36 |         let _: Type;
   |                ^^^^ undefined or not in scope
   |
   = help: no candidates by the name of `Type` found in your project; maybe you misspelled the name or forgot to import an external crate?

error[E0531]: unresolved tuple struct/variant `Type`
  --> $DIR/resolve-assoc-suggestions.rs:39:13
   |
39 |         let Type(..);
   |             ^^^^

error[E0425]: unresolved name `Type`
  --> $DIR/resolve-assoc-suggestions.rs:42:9
   |
42 |         Type;
   |         ^^^^ did you mean to call `self.Type`?

error[E0412]: type name `method` is undefined or not in scope
  --> $DIR/resolve-assoc-suggestions.rs:46:16
   |
46 |         let _: method;
   |                ^^^^^^ undefined or not in scope
   |
   = help: no candidates by the name of `method` found in your project; maybe you misspelled the name or forgot to import an external crate?

error[E0531]: unresolved tuple struct/variant `method`
  --> $DIR/resolve-assoc-suggestions.rs:49:13
   |
49 |         let method(..);
   |             ^^^^^^

error[E0425]: unresolved name `method`
  --> $DIR/resolve-assoc-suggestions.rs:52:9
   |
52 |         method;
   |         ^^^^^^ did you mean to call `self.method`?

error: aborting due to 9 previous errors

